Azuriranje tenisera, primena OOP PHP-a

--- a/style.css
+++ b/style.css
@@ -11,3 +11,9 @@
 #tabela-teniseri {
     margin-bottom: 100px;
 }
+
+#forma-izmena-teniser {
+    width: 400px;
+    margin-left: 100px;
+    margin-top: 40px;
+}
