Pretrazivanje i sortiranje tenisera na pocetnoj strani

--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
     margin-top: 30px;
 }
 
-#tabela-teniseri {
-    margin-bottom: 100px;
+body {
+    background-color: whitesmoke;
 }
 
 #forma-izmena-teniser {
